--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,26 @@
 }
 
 
+.image-editor-baseimage {
+    display: block;
+    position: absolute;
 
+    width: 800px;
+    height: 400px;
+
+    opacity: 0.2;
+}
+
+.image-editor-canvaszone {
+    display: block;
+    position: absolute;
+
+    width: 800px;
+    height: 400px;
+    border: solid 1px rgba(200,200,200,1);
+    opacity: 0.4;
+    z-index: 1000;
+}
 
 
 @tailwind base;
